# powdr-lsp

./: Cargo.toml  test.asm
src/: analyzer.rs  lib.rs  main.rs  span.rs  symbol.rs
src/hover/: mod.rs
src/parser/: mod.rs
test_data/: submachine_not_found.asm  test.asm  test.pil
