[package]
name = "powdr-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1.0.107"
powdr-parser = { git = "https://github.com/powdr-labs/powdr", default-features = false, branch = "lsp-mods" }
powdr-importer = { git = "https://github.com/powdr-labs/powdr", default-features = false, branch = "lsp-mods" }
powdr-parser-util = { git = "https://github.com/powdr-labs/powdr", default-features = false, branch = "lsp-mods" }
powdr-ast = { git = "https://github.com/powdr-labs/powdr", default-features = false, branch = "lsp-mods" }
powdr-number = { git = "https://github.com/powdr-labs/powdr", default-features = false, branch = "lsp-mods" }
powdr-analysis = { git = "https://github.com/powdr-labs/powdr", default-features = false, branch = "lsp-mods" }
powdr-pil-analyzer = { git = "https://github.com/powdr-labs/powdr", default-features = false, branch = "lsp-mods" }

[build-dependencies]
lalrpop = "0.20.0"
